--- a/detail.html
+++ b/detail.html
@@ -12,7 +12,7 @@
         <ul>
         <a href="index.html"><img class="logo" src="../ProyectoIntegrador/img/logo2.jpeg" alt="logo" srcset=""></a>
         <li><a class="titulos" href="detail.html">TRACKS</a></li>
-        <li><a class="titulos" href="detail.html">ALBUM</a></li>
+        <li><a class="titulos" href="detail.html">ÁLBUM</a></li>
         <li><a class="titulos" href="detail.html">ARTIST</a></li>
         <li><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
         </ul>    
