--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul>
         <img class="logo" src="../ProyectoIntegrador/img/logo2.jpeg" alt="logo" srcset="">
         <li><a class="titulos" href="detail.html">TRACKS</a></li>
-        <li><a class="titulos" href="detail.html">ALBUM</a></li>
+        <li><a class="titulos" href="detail.html">ÁLBUM</a></li>
         <li><a class="titulos" href="detail.html">ARTIST</a></li>
         <li><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
         </ul>    
@@ -49,7 +49,7 @@
         </ul>
        </section>
        <section class="tracks">
-       <h2>TOP ALBUMS</h2>
+       <h2>TOP ÁLBUMS</h2>
         <ul>
             <li> <a href="detail.html" class="artista">After Hours (Deluxe)</a> </li>
             <li> <a href="" class="artista"></a> Tossie Slide</li>
