--- a/playlist.html
+++ b/playlist.html
@@ -17,7 +17,7 @@
     <ul>
     <a href="index.html"><img class="logo" src="../ProyectoIntegrador/img/logo2.jpeg" alt="logo" srcset="">
         <li><a class="titulos" href="detail.html">TRACKS</a></li>
-        <li><a class="titulos" href="detail.html">ALBUM</a></li>
+        <li><a class="titulos" href="detail.html">ÁLBUM</a></li>
         <li><a class="titulos" href="detail.html">ARTIST</a></li>
         <li><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
     </ul>   
@@ -29,7 +29,7 @@
     <img class= "fotoartista" src="" alt="" srcset="">
     <li class="encabezado">Canción</li>
     <li class="encabezado">Artista </li>
-    <li class="encabezado">Album</li>
+    <li class="encabezado">Álbum</li>
     <li class="puntos"></li>
     <img class="fotoartista" src="../ProyectoIntegrador/img/jbalvin (2).jpg" alt="jbalvin" srcset="">
     <li>LA CANCIÓN</li>
@@ -131,10 +131,55 @@
     <li>Sam Smith</li>
     <li>In The Lonely Hour</li>
     <li class="puntos">...</li>
-
-    </ul>    
+    </ul> 
 </div>
 </section>
+<section class="p-celu">
+<h2 class="playlist-celu">My Playlist</h2>
+    <div class="mobile">
+        <ul class="play-celu">
+            <img class="fotoartista" src="../ProyectoIntegrador/img/jbalvin (2).jpg" alt="jbalvin" srcset="">
+            <li>LA CANCIÓN <br>J Balvin</br></li>
+            <img class="fotoartista" src="../ProyectoIntegrador/img/badbunny.png" alt="badbunny" srcset="">
+            <li>Vete <br>Bad Bunny </br></li>
+            <img class="fotoartista"  src="../ProyectoIntegrador/img/justinbieber.jpg" alt="justinbieber">
+            <li>All Around Me <br>Justin Bieber</li>
+            <img class="fotoartista"  src="../ProyectoIntegrador/img/camilacabello.png" alt="camilacabello">
+            <li>She Loves Control <br>Camila Cabello</li>
+            <img class="fotoartista"  src="../ProyectoIntegrador/img/imaginedragons.jpg" alt="imaginedragons">
+            <li>Next To Me <br>Imagine Dragons</li>
+            <img class="fotoartista"  src="../ProyectoIntegrador/img/postmalone.jpg" alt="postmalone">
+            <li>Big Lie <br>Post Malone</li>
+            <img class="fotoartista"  src="../ProyectoIntegrador/img/samsmith.jpg" alt="samsmith">
+            <li>Stay With Me <br>Sam Smith</li>
+            <img class="fotoartista"  src="../ProyectoIntegrador/img/shawnmendez.jpg" alt="shawnmendez">
+            <li>Ruin <br>Shawn Mendes</li>
+            <img class="fotoartista"  src="../ProyectoIntegrador/img/albumafterhours.jpg" alt="theweekend">
+            <li>Alone Again <br>The Weekend</li>
+            <img class="fotoartista"  src="../ProyectoIntegrador/img/travis.jpg" alt="travis">
+            <li>STARGAZING <br>Travis Scott</li>
+            <img class="fotoartista"  src="../ProyectoIntegrador/img/jbalvin (2).jpg" alt="jbalvin">
+            <li>COMO UN BEBÉ <br>J Balvin</li>
+            <img class="fotoartista"  src="../ProyectoIntegrador/img/dualipa.jpg" alt="dualipa">
+            <li>Genesis <br>Dua Lipa</li>
+            <img class="fotoartista"  src="../ProyectoIntegrador/img/drake (2).jpg" alt="drake">
+            <li>Survival <br>Drake</li>
+            <img class="fotoartista"  src="../ProyectoIntegrador/img/brunomars.jpg" alt="brunomars">
+            <li>Finesse <br>Bruno Mars</li>
+            <img class="fotoartista"  src="../ProyectoIntegrador/img/twentyonepilots.jpg" alt="twentyonepilots">
+            <li>Stessed Out <br>Twenty One Pilots</li>
+            <img class="fotoartista"  src="../ProyectoIntegrador/img/trilogy.jpg" alt="trilogy">
+            <li>High For This <br>The Weeknd</li>
+            <img class="fotoartista"  src="../ProyectoIntegrador/img/badbunny.png" alt="badbunny">
+            <li>NI BIEN NI MAL <br>Bad Bunny</li>
+            <img class="fotoartista"  src="../ProyectoIntegrador/img/justinbieber.jpg" alt="justinbieber">
+            <li>Habitual <br>Justin Bieber</li>
+            <img class="fotoartista"  src="../ProyectoIntegrador/img/camilacabello.png" alt="camilacabello">
+            <li>Never Be the Same <br>Camila Cabello</li>
+            <img class="fotoartista"  src="../ProyectoIntegrador/img/samsmith.jpg" alt="samsmith">
+            <li>I'm Not The Only One <br>Sam Smith</li>
+        </ul>
+    </div>
 </div>
 </body>
 </html>
