--- a/detail.html
+++ b/detail.html
@@ -17,15 +17,17 @@
         <li><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
         </ul>    
     </div>
-    <header>
-        <h1 class="titulo">The Weekend</h1>
-       <img class="weeknd" src="../ProyectoIntegrador/img/theweekvalu.jpg" alt="" srcset="">
-       <ul>
-           <li class="descripcion">Abel Makkonen Tesfaye, mejor conocido por su nombre artístico The Weeknd, es un cantante, compositor y productor canadiense.
-           Tesfaye nació el 16 de febrero de 1990, en Toronto, Ontario, Canadá, y se crió en Scarborough, Él es de origen etíope, sus padres Makonnen y Samra emigraron de Etiopía en la década de 1980. Se crió escuchando una variedad de géneros musicales, incluyendo soul, quiet storm, hip hop, funk, indie rock, y post-punk.
-           </li>
-       </ul>
-    </header>
+    <div class="orden">
+        <header>
+            <h1 class="titulo">The Weekend</h1>
+            <img class="weeknd" src="../ProyectoIntegrador/img/theweekvalu.jpg" alt="" srcset="">
+            <ul>
+                <li class="descripcion">Abel Makkonen Tesfaye, mejor conocido por su nombre artístico The Weeknd, es un cantante, compositor y productor canadiense.
+                Tesfaye nació el 16 de febrero de 1990, en Toronto, Ontario, Canadá, y se crió en Scarborough, Él es de origen etíope, sus padres Makonnen y Samra emigraron de Etiopía en la década de 1980. Se crió escuchando una variedad de géneros musicales, incluyendo soul, quiet storm, hip hop, funk, indie rock, y post-punk.
+                </li>
+            </ul>
+        </header>
+    </div>
     <section class="foto-albumes">
         <div class="fotos">
             <img class="albumes" src="../ProyectoIntegrador/img/mydearmelancholy.jpg" alt="mydearmelancholy" srcset="">
