--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="grid-container">
         <ul>
-        <img class="logo" src="../ProyectoIntegrador/img/logo2.jpeg" alt="logo" srcset="">
+        <li><img class="logo" src="img/logo2.jpeg" alt="logo" srcset=""></li>
         <li><a class="titulos" href="detail.html">TRACKS</a></li>
         <li><a class="titulos" href="detail.html">ÁLBUM</a></li>
         <li><a class="titulos" href="detail.html">ARTIST</a></li>
@@ -90,46 +90,46 @@
    </footer>
    <section class="foto-bandas">
        <div class="fotos">
-         <a href="detail.html"><img class="Theweeknd" src="../ProyectoIntegrador/img/theweekend.jpg" alt="Theweeknd" srcset=""></a>
+         <a href="detail.html"><img class="Theweeknd" src="img/theweekend.jpg" alt="Theweeknd" srcset=""></a>
        </div>
        <div class="fotos">
-        <a href="detail.html"><img class="Drake" src="../ProyectoIntegrador/img/drake (2).jpg" alt="drake" srcset=""></a>
+        <a href="detail.html"><img class="Drake" src="img/drake (2).jpg" alt="drake" srcset=""></a>
        </div>
        <div class="PostMalone">
-        <a href="detail.html"><img src="../ProyectoIntegrador/img/postmalone.jpg" alt="postmalone" srcset=""></a>
+        <a href="detail.html"><img src="img/postmalone.jpg" alt="postmalone" srcset=""></a>
        </div>
        <div class="DuaLipa">
-        <a href="detail.html"><img class="Dualipa" src="../ProyectoIntegrador/img/dualipa.jpg" alt="dualipa" srcset=""></a>
+        <a href="detail.html"><img class="Dualipa" src="img/dualipa.jpg" alt="dualipa" srcset=""></a>
        </div>
        <div class="fotos">
-        <a href="detail.html"><img class="JustinBieber" src="../ProyectoIntegrador/img/justinbieber.jpg" alt="justinbieber" srcset=""></a>
+        <a href="detail.html"><img class="JustinBieber" src="img/justinbieber.jpg" alt="justinbieber" srcset=""></a>
       </div>
       <div class="fotos">
-        <a href="detail.html"><img class="Badbunny" src="../ProyectoIntegrador/img/badbunny.png" alt="badbunny" srcset=""></a>
+        <a href="detail.html"><img class="Badbunny" src="img/badbunny.png" alt="badbunny" srcset=""></a>
       </div>
       <div class="fotos">
-        <a href="detail.html"><img class="Twenty" src="../ProyectoIntegrador/img/twentyonepilots.jpg" alt="twentyonepilots" srcset=""></a>
+        <a href="detail.html"><img class="Twenty" src="img/twentyonepilots.jpg" alt="twentyonepilots" srcset=""></a>
       </div>
       <div class="fotos">
-        <a href="detail.html"><img class="maroon5" src="../ProyectoIntegrador/img/maroon5 (2).jpg" alt="maroon5" srcset=""></a>
+        <a href="detail.html"><img class="maroon5" src="img/maroon5 (2).jpg" alt="maroon5" srcset=""></a>
       </div>
       <div class="fotos">
-        <a href="detail.html"><img class="Camilacabello" src="../ProyectoIntegrador/img/camilacabello.png" alt="camilacabello" srcset=""></a>
+        <a href="detail.html"><img class="Camilacabello" src="img/camilacabello.png" alt="camilacabello" srcset=""></a>
       </div>
       <div class="fotos">
-        <a href="detail.html"><img class="Travisscott" src="../ProyectoIntegrador/img/travis.jpg" alt="Travisscott" srcset=""></a>
+        <a href="detail.html"><img class="Travisscott" src="img/travis.jpg" alt="Travisscott" srcset=""></a>
       </div>
       <div class="fotos">
-        <a href="detail.html"><img class="Imaginedragons" src="../ProyectoIntegrador/img/imaginedragons.jpg" alt="imaginedragons" srcset=""></a>
+        <a href="detail.html"><img class="Imaginedragons" src="img/imaginedragons.jpg" alt="imaginedragons" srcset=""></a>
       </div>
       <div class="fotos">
-        <a href="detail.html"><img class="Brunomars" src="../ProyectoIntegrador/img/brunomars.jpg" alt="Brunomars" srcset=""></a>
+        <a href="detail.html"><img class="Brunomars" src="img/brunomars.jpg" alt="Brunomars" srcset=""></a>
       </div>
       <div class="fotos">
-        <a href="detail.html"><img class="Samsmith" src="../ProyectoIntegrador/img/samsmith.jpg" alt="samsmith" srcset=""></a>
+        <a href="detail.html"><img class="Samsmith" src="img/samsmith.jpg" alt="samsmith" srcset=""></a>
       </div>
       <div class="fotos">
-        <a href="detail.html"><img class="jbalvin" src="../ProyectoIntegrador/img/jbalvin (2).jpg" alt="jbalvin" srcset=""></a>
+        <a href="detail.html"><img class="jbalvin" src="img/jbalvin (2).jpg" alt="jbalvin" srcset=""></a>
       </div>
    </section>
 </body>
