--- a/detail.html
+++ b/detail.html
@@ -10,7 +10,7 @@
 <body>
     <div class="grid-container">
         <ul>
-        <a href="index.html"><img class="logo" src="../ProyectoIntegrador/img/logo2.jpeg" alt="logo" srcset=""></a>
+        <a href="index.html"><img class="logo" src="img/logo2.jpeg" alt="logo" srcset=""></a>
         <li><a class="titulos" href="detail.html">TRACKS</a></li>
         <li><a class="titulos" href="detail.html">ÁLBUM</a></li>
         <li><a class="titulos" href="detail.html">ARTIST</a></li>
