--- a/playlist.html
+++ b/playlist.html
@@ -15,7 +15,7 @@
 </div>
 <div class="grid-container">
     <ul>
-    <a href="index.html"><img class="logo" src="../ProyectoIntegrador/img/logo2.jpeg" alt="logo" srcset="">
+    <a href="index.html"><img class="logo" src="img/logo2.jpeg" alt="logo" srcset="">
         <li><a class="titulos" href="detail.html">TRACKS</a></li>
         <li><a class="titulos" href="detail.html">ÁLBUM</a></li>
         <li><a class="titulos" href="detail.html">ARTIST</a></li>
@@ -31,102 +31,102 @@
     <li class="encabezado">Artista </li>
     <li class="encabezado">Álbum</li>
     <li class="puntos"></li>
-    <img class="fotoartista" src="../ProyectoIntegrador/img/jbalvin (2).jpg" alt="jbalvin" srcset="">
+    <img class="fotoartista" src="img/jbalvin (2).jpg" alt="jbalvin" srcset="">
     <li>LA CANCIÓN</li>
     <li>J. Balvin</li>
     <li>OASIS</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="../ProyectoIntegrador/img/badbunny.png" alt="badbunny" srcset="">
+    <img class="fotoartista" src="img/badbunny.png" alt="badbunny" srcset="">
     <li>Vete</li>
     <li>Bad Bunny</li>
     <li>YHLQMDLG</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="../ProyectoIntegrador/img/justinbieber.jpg" alt="justinbieber" srcset="">
+    <img class="fotoartista" src="img/justinbieber.jpg" alt="justinbieber" srcset="">
     <li>All Around Me</li>
     <li>Justin Bieber </li>
     <li>Changes</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="../ProyectoIntegrador/img/camilacabello.png" alt="camilacabello" srcset="">
+    <img class="fotoartista" src="img/camilacabello.png" alt="camilacabello" srcset="">
     <li>She Loves Control</li>
     <li>Camila Cabello </li>
     <li>Camila</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="../ProyectoIntegrador/img/imaginedragons.jpg" alt="imaginedragons" srcset="">
+    <img class="fotoartista" src="img/imaginedragons.jpg" alt="imaginedragons" srcset="">
     <li>Next To Me</li>
     <li>Imagine Dragons </li>
     <li>Evolve</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="../ProyectoIntegrador/img/postmalone.jpg" alt="postmalone" srcset="">
+    <img class="fotoartista" src="img/postmalone.jpg" alt="postmalone" srcset="">
     <li>Big Lie</li>
     <li>Post Malone</li>
     <li>Stoney (Deluxe)</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="../ProyectoIntegrador/img/samsmith.jpg" alt="samsmith" srcset="">
+    <img class="fotoartista" src="img/samsmith.jpg" alt="samsmith" srcset="">
     <li>Stay With Me</li>
     <li>Sam Smith</li>
     <li>In The Lonely Hour</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="../ProyectoIntegrador/img/shawnmendez.jpg" alt="shawnmendez" srcset="">
+    <img class="fotoartista" src="img/shawnmendez.jpg" alt="shawnmendez" srcset="">
     <li>Ruin</li>
     <li>Shawn Mendes</li>
     <li>Illuminate (Deluxe)</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="../ProyectoIntegrador/img/albumafterhours.jpg" alt="theweekend" srcset="">
+    <img class="fotoartista" src="img/albumafterhours.jpg" alt="theweekend" srcset="">
     <li>Alone Again</li>
     <li>The Weeknd</li>
     <li>After Hours</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="../ProyectoIntegrador/img/travis.jpg" alt="travis" srcset="">
+    <img class="fotoartista" src="img/travis.jpg" alt="travis" srcset="">
     <li>STARGAZING</li>
     <li>Travis Scott</li>
     <li>ASTROWORLD</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="../ProyectoIntegrador/img/jbalvin (2).jpg" alt="jbalvin" srcset="">
+    <img class="fotoartista" src="img/jbalvin (2).jpg" alt="jbalvin" srcset="">
     <li>COMO UN BEBÉ</li>
     <li>J. Balvin</li>
     <li>OASIS</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="../ProyectoIntegrador/img/dualipa.jpg" alt="dualipa" srcset="">
+    <img class="fotoartista" src="img/dualipa.jpg" alt="dualipa" srcset="">
     <li>Genesis</li>
     <li>Dua Lipa</li>
     <li>Dua Lipa (Deluxe)</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="../ProyectoIntegrador/img/drake (2).jpg" alt="drake" srcset="">
+    <img class="fotoartista" src="img/drake (2).jpg" alt="drake" srcset="">
     <li>Survival</li>
     <li>Drake</li>
     <li>Scorpion</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="../ProyectoIntegrador/img/brunomars.jpg" alt="brunomars" srcset="">
+    <img class="fotoartista" src="img/brunomars.jpg" alt="brunomars" srcset="">
     <li>Finesse</li>
     <li>Bruno Mars</li>
     <li>24K Magic</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="../ProyectoIntegrador/img/twentyonepilots.jpg" alt="twentyonepilots" srcset="">
+    <img class="fotoartista" src="img/twentyonepilots.jpg" alt="twentyonepilots" srcset="">
     <li>Stressed Out</li>
     <li>Twenty One Pilots</li>
     <li>Blurryface</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="../ProyectoIntegrador/img/trilogy.jpg" alt="trilogy" srcset="">
+    <img class="fotoartista" src="img/trilogy.jpg" alt="trilogy" srcset="">
     <li>High For This</li>
     <li>The Weeknd</li>
     <li>Trilogy</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="../ProyectoIntegrador/img/badbunny.png" alt="badbunny" srcset="">
+    <img class="fotoartista" src="img/badbunny.png" alt="badbunny" srcset="">
     <li>NI BIEN NI MAL</li>
     <li>Bad Bunny</li>
     <li>X100PRE</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="../ProyectoIntegrador/img/justinbieber.jpg" alt="justinbieber" srcset="">
+    <img class="fotoartista" src="img/justinbieber.jpg" alt="justinbieber" srcset="">
     <li>Habitual</li>
     <li>Justin Bieber</li>
     <li>Changes</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="../ProyectoIntegrador/img/camilacabello.png" alt="camilacabello" srcset="">
+    <img class="fotoartista" src="img/camilacabello.png" alt="camilacabello" srcset="">
     <li>Never Be the Same</li>
     <li>Camila Cabello</li>
     <li>Camila</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="../ProyectoIntegrador/img/samsmith.jpg" alt="samsmith" srcset="">
+    <img class="fotoartista" src="img/samsmith.jpg" alt="samsmith" srcset="">
     <li>I'm Not The Only One</li>
     <li>Sam Smith</li>
     <li>In The Lonely Hour</li>
@@ -138,45 +138,45 @@
 <h2 class="playlist-celu">My Playlist</h2>
     <div class="mobile">
         <ul class="play-celu">
-            <img class="fotoartista" src="../ProyectoIntegrador/img/jbalvin (2).jpg" alt="jbalvin" srcset="">
+            <img class="fotoartista" src="img/jbalvin (2).jpg" alt="jbalvin" srcset="">
             <li>LA CANCIÓN <br>J Balvin</br></li>
-            <img class="fotoartista" src="../ProyectoIntegrador/img/badbunny.png" alt="badbunny" srcset="">
+            <img class="fotoartista" src="img/badbunny.png" alt="badbunny" srcset="">
             <li>Vete <br>Bad Bunny </br></li>
-            <img class="fotoartista"  src="../ProyectoIntegrador/img/justinbieber.jpg" alt="justinbieber">
+            <img class="fotoartista"  src="img/justinbieber.jpg" alt="justinbieber">
             <li>All Around Me <br>Justin Bieber</li>
-            <img class="fotoartista"  src="../ProyectoIntegrador/img/camilacabello.png" alt="camilacabello">
+            <img class="fotoartista"  src="img/camilacabello.png" alt="camilacabello">
             <li>She Loves Control <br>Camila Cabello</li>
-            <img class="fotoartista"  src="../ProyectoIntegrador/img/imaginedragons.jpg" alt="imaginedragons">
+            <img class="fotoartista"  src="img/imaginedragons.jpg" alt="imaginedragons">
             <li>Next To Me <br>Imagine Dragons</li>
-            <img class="fotoartista"  src="../ProyectoIntegrador/img/postmalone.jpg" alt="postmalone">
+            <img class="fotoartista"  src="img/postmalone.jpg" alt="postmalone">
             <li>Big Lie <br>Post Malone</li>
-            <img class="fotoartista"  src="../ProyectoIntegrador/img/samsmith.jpg" alt="samsmith">
+            <img class="fotoartista"  src="img/samsmith.jpg" alt="samsmith">
             <li>Stay With Me <br>Sam Smith</li>
-            <img class="fotoartista"  src="../ProyectoIntegrador/img/shawnmendez.jpg" alt="shawnmendez">
+            <img class="fotoartista"  src="img/shawnmendez.jpg" alt="shawnmendez">
             <li>Ruin <br>Shawn Mendes</li>
-            <img class="fotoartista"  src="../ProyectoIntegrador/img/albumafterhours.jpg" alt="theweekend">
+            <img class="fotoartista"  src="img/albumafterhours.jpg" alt="theweekend">
             <li>Alone Again <br>The Weekend</li>
-            <img class="fotoartista"  src="../ProyectoIntegrador/img/travis.jpg" alt="travis">
+            <img class="fotoartista"  src="img/travis.jpg" alt="travis">
             <li>STARGAZING <br>Travis Scott</li>
-            <img class="fotoartista"  src="../ProyectoIntegrador/img/jbalvin (2).jpg" alt="jbalvin">
+            <img class="fotoartista"  src="img/jbalvin (2).jpg" alt="jbalvin">
             <li>COMO UN BEBÉ <br>J Balvin</li>
-            <img class="fotoartista"  src="../ProyectoIntegrador/img/dualipa.jpg" alt="dualipa">
+            <img class="fotoartista"  src="img/dualipa.jpg" alt="dualipa">
             <li>Genesis <br>Dua Lipa</li>
-            <img class="fotoartista"  src="../ProyectoIntegrador/img/drake (2).jpg" alt="drake">
+            <img class="fotoartista"  src="img/drake (2).jpg" alt="drake">
             <li>Survival <br>Drake</li>
-            <img class="fotoartista"  src="../ProyectoIntegrador/img/brunomars.jpg" alt="brunomars">
+            <img class="fotoartista"  src="img/brunomars.jpg" alt="brunomars">
             <li>Finesse <br>Bruno Mars</li>
-            <img class="fotoartista"  src="../ProyectoIntegrador/img/twentyonepilots.jpg" alt="twentyonepilots">
+            <img class="fotoartista"  src="img/twentyonepilots.jpg" alt="twentyonepilots">
             <li>Stessed Out <br>Twenty One Pilots</li>
-            <img class="fotoartista"  src="../ProyectoIntegrador/img/trilogy.jpg" alt="trilogy">
+            <img class="fotoartista"  src="img/trilogy.jpg" alt="trilogy">
             <li>High For This <br>The Weeknd</li>
-            <img class="fotoartista"  src="../ProyectoIntegrador/img/badbunny.png" alt="badbunny">
+            <img class="fotoartista"  src="img/badbunny.png" alt="badbunny">
             <li>NI BIEN NI MAL <br>Bad Bunny</li>
-            <img class="fotoartista"  src="../ProyectoIntegrador/img/justinbieber.jpg" alt="justinbieber">
+            <img class="fotoartista"  src="img/justinbieber.jpg" alt="justinbieber">
             <li>Habitual <br>Justin Bieber</li>
-            <img class="fotoartista"  src="../ProyectoIntegrador/img/camilacabello.png" alt="camilacabello">
+            <img class="fotoartista"  src="img/camilacabello.png" alt="camilacabello">
             <li>Never Be the Same <br>Camila Cabello</li>
-            <img class="fotoartista"  src="../ProyectoIntegrador/img/samsmith.jpg" alt="samsmith">
+            <img class="fotoartista"  src="img/samsmith.jpg" alt="samsmith">
             <li>I'm Not The Only One <br>Sam Smith</li>
         </ul>
     </div>
