cambios detail nuevos para que no se mueva

--- a/detail.html
+++ b/detail.html
@@ -26,6 +26,10 @@
                 Tesfaye nació el 16 de febrero de 1990, en Toronto, Ontario, Canadá, y se crió en Scarborough, Él es de origen etíope, sus padres Makonnen y Samra emigraron de Etiopía en la década de 1980. Se crió escuchando una variedad de géneros musicales, incluyendo soul, quiet storm, hip hop, funk, indie rock, y post-punk.
                 </li>
             </ul>
+            <ul class="iconos-redes">
+                <a href="https://www.instagram.com/theweeknd/?hl=es-la"><img class="instagram" src="img/logoinsta.png" alt=""></a>
+                <a href="https://twitter.com/theweeknd?lang=es"><img class="twitter" src="img/logotwitter.png" alt=""></a>
+            </ul>
         </header>
     </div>
     <section class="foto-albumes">
