--- a/index.html
+++ b/index.html
@@ -17,22 +17,14 @@
         </header>
     </div>
     <div class="grid-container">
-        <ul>
-<<<<<<< HEAD
-        <li><img class="logo" src="img/logo2.jpeg" alt="logo" srcset=""></li>
-        <li><a class="titulos" href="detail.html">TRACKS</a></li>
-        <li><a class="titulos" href="detail.html">ÁLBUM</a></li>
-        <li><a class="titulos" href="detail.html">ARTIST</a></li>
-        <li><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
-=======
-          <li><img class="logo" src="../ProyectoIntegrador/img/logo2.jpeg" alt="logo" srcset=""></li>
-          <li><a class="titulos" href="detail.html">TRACKS</a></li>
-          <li><a class="titulos" href="detail.html">ÁLBUM</a></li>
-          <li><a class="titulos" href="detail.html">ARTIST</a></li>
-          <li><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
->>>>>>> 04799248901d34a85ba7602f750e27e742d14b82
-        </ul>    
-    </div>
+      <ul>
+      <a href="index.html"><img class="logo" src="img/logo2.jpeg" alt="logo" srcset=""></a>
+      <li><a class="titulos" href="detail.html">TRACKS</a></li>
+      <li><a class="titulos" href="detail.html">ÁLBUM</a></li>
+      <li><a class="titulos" href="detail.html">ARTIST</a></li>
+      <li><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
+      </ul>    
+  </div>
    <section class="banner">
        <img class="banner" src="../ProyectoIntegrador/img/technomusica.jpg" alt="banner" srcset=""> 
    </section>
