--- a/playlist.html
+++ b/playlist.html
@@ -15,12 +15,13 @@
 </div>
 <div class="grid-container">
     <ul>
-    <a href="index.html"><img class="logo" src="img/logo2.jpeg" alt="logo" srcset="">
-        <li><a class="titulos" href="detail.html">TRACKS</a></li>
-        <li><a class="titulos" href="detail.html">ÁLBUM</a></li>
-        <li><a class="titulos" href="detail.html">ARTIST</a></li>
-        <li><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
-    </ul>   
+    <a href="index.html"><img class="logo" src="img/logo2.jpeg" alt="logo" srcset=""></a>
+    <li><a class="titulos" href="detail.html">TRACKS</a></li>
+    <li><a class="titulos" href="detail.html">ÁLBUM</a></li>
+    <li><a class="titulos" href="detail.html">ARTIST</a></li>
+    <li><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
+    </ul>    
+</div>
 <div class="playlist">
     <h2>MY PLAYLIST</h2>
 </div>
