--- a/playlist.html
+++ b/playlist.html
@@ -22,7 +22,7 @@
     <li><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
     </ul>    
 </div>
-<div class="playlist">
+<div class="titplaylist">
     <h2>MY PLAYLIST</h2>
 </div>
 <div class="playlist">
@@ -72,7 +72,7 @@
     <li>Shawn Mendes</li>
     <li>Illuminate (Deluxe)</li>
     <li class="puntos">...</li>
-    <img class="fotoartista" src="img/albumafterhours.jpg" alt="theweekend" srcset="">
+    <img class="fotoartista" src="img/theweeknd.jpg" alt="theweekend" srcset="">
     <li>Alone Again</li>
     <li>The Weeknd</li>
     <li>After Hours</li>
@@ -136,12 +136,10 @@
 </div>
 </section>
 <section class="p-celu">
-<h2 class="playlist-celu">My Playlist</h2>
     <div class="mobile">
         <ul class="play-celu">
-            <img class="fotoartista" src="img/jbalvin (2).jpg" alt="jbalvin" srcset="">
-            <li>LA CANCIÓN <br>J Balvin</br></li>
-            <img class="fotoartista" src="img/badbunny.png" alt="badbunny" srcset="">
+            <li><img class="fotoartista" src="img/jbalvin (2).jpg" alt="jbalvin" srcset=""></li>
+            <li>LA CANCIÓN <br>J Balvin</br></li><img class="fotoartista" src="img/badbunny.png" alt="badbunny" srcset="">
             <li>Vete <br>Bad Bunny </br></li>
             <img class="fotoartista"  src="img/justinbieber.jpg" alt="justinbieber">
             <li>All Around Me <br>Justin Bieber</li>
@@ -181,6 +179,7 @@
             <li>I'm Not The Only One <br>Sam Smith</li>
         </ul>
     </div>
+</section>
 </div>
 </body>
 </html>
