--- a/playlist.html
+++ b/playlist.html
@@ -141,41 +141,41 @@
             <li><img class="fotoartista" src="img/jbalvin (2).jpg" alt="jbalvin" srcset=""></li>
             <li>LA CANCIÓN <br>J Balvin</br></li><img class="fotoartista" src="img/badbunny.png" alt="badbunny" srcset="">
             <li>Vete <br>Bad Bunny </br></li>
-            <img class="fotoartista"  src="img/justinbieber.jpg" alt="justinbieber">
+            <li><img class="fotoartista"  src="img/justinbieber.jpg" alt="justinbieber">
             <li>All Around Me <br>Justin Bieber</li>
-            <img class="fotoartista"  src="img/camilacabello.png" alt="camilacabello">
+            <li><img class="fotoartista"  src="img/camilacabello.png" alt="camilacabello">
             <li>She Loves Control <br>Camila Cabello</li>
-            <img class="fotoartista"  src="img/imaginedragons.jpg" alt="imaginedragons">
+            <li><img class="fotoartista"  src="img/imaginedragons.jpg" alt="imaginedragons">
             <li>Next To Me <br>Imagine Dragons</li>
-            <img class="fotoartista"  src="img/postmalone.jpg" alt="postmalone">
+            <li><img class="fotoartista"  src="img/postmalone.jpg" alt="postmalone">
             <li>Big Lie <br>Post Malone</li>
-            <img class="fotoartista"  src="img/samsmith.jpg" alt="samsmith">
+            <li><img class="fotoartista"  src="img/samsmith.jpg" alt="samsmith">
             <li>Stay With Me <br>Sam Smith</li>
-            <img class="fotoartista"  src="img/shawnmendez.jpg" alt="shawnmendez">
+            <li><img class="fotoartista"  src="img/shawnmendez.jpg" alt="shawnmendez">
             <li>Ruin <br>Shawn Mendes</li>
-            <img class="fotoartista"  src="img/albumafterhours.jpg" alt="theweekend">
+            <li><img class="fotoartista"  src="img/albumafterhours.jpg" alt="theweekend">
             <li>Alone Again <br>The Weekend</li>
-            <img class="fotoartista"  src="img/travis.jpg" alt="travis">
+            <li><img class="fotoartista"  src="img/travis.jpg" alt="travis">
             <li>STARGAZING <br>Travis Scott</li>
-            <img class="fotoartista"  src="img/jbalvin (2).jpg" alt="jbalvin">
+            <li><img class="fotoartista"  src="img/jbalvin (2).jpg" alt="jbalvin">
             <li>COMO UN BEBÉ <br>J Balvin</li>
-            <img class="fotoartista"  src="img/dualipa.jpg" alt="dualipa">
+            <li><img class="fotoartista"  src="img/dualipa.jpg" alt="dualipa">
             <li>Genesis <br>Dua Lipa</li>
-            <img class="fotoartista"  src="img/drake (2).jpg" alt="drake">
+            <li><img class="fotoartista"  src="img/drake (2).jpg" alt="drake">
             <li>Survival <br>Drake</li>
-            <img class="fotoartista"  src="img/brunomars.jpg" alt="brunomars">
+            <li><img class="fotoartista"  src="img/brunomars.jpg" alt="brunomars">
             <li>Finesse <br>Bruno Mars</li>
-            <img class="fotoartista"  src="img/twentyonepilots.jpg" alt="twentyonepilots">
+            <li><img class="fotoartista"  src="img/twentyonepilots.jpg" alt="twentyonepilots">
             <li>Stessed Out <br>Twenty One Pilots</li>
-            <img class="fotoartista"  src="img/trilogy.jpg" alt="trilogy">
+            <li><img class="fotoartista"  src="img/trilogy.jpg" alt="trilogy">
             <li>High For This <br>The Weeknd</li>
-            <img class="fotoartista"  src="img/badbunny.png" alt="badbunny">
+            <li><img class="fotoartista"  src="img/badbunny.png" alt="badbunny">
             <li>NI BIEN NI MAL <br>Bad Bunny</li>
-            <img class="fotoartista"  src="img/justinbieber.jpg" alt="justinbieber">
+            <li><img class="fotoartista"  src="img/justinbieber.jpg" alt="justinbieber">
             <li>Habitual <br>Justin Bieber</li>
-            <img class="fotoartista"  src="img/camilacabello.png" alt="camilacabello">
+            <li><img class="fotoartista"  src="img/camilacabello.png" alt="camilacabello">
             <li>Never Be the Same <br>Camila Cabello</li>
-            <img class="fotoartista"  src="img/samsmith.jpg" alt="samsmith">
+            <li><img class="fotoartista"  src="img/samsmith.jpg" alt="samsmith">
             <li>I'm Not The Only One <br>Sam Smith</li>
         </ul>
     </div>
